Fixed: invisible caractor color

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -27,7 +27,7 @@ atom-text-editor {
     box-sizing: border-box;
   }
 
-  .syntax--invisible-character {
+  .invisible-character {
     color: @syntax-invisible-character-color;
   }
 
